Fixing the visibility and positioning problems
Last patch I forgot to include the CSS file.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -131,6 +131,32 @@ html, body {
   transform: translate(-50%, -50%);
 }
 
+#ReportForm {
+  background: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  position: fixed;
+  width: 100%;
+  z-index: 60000;
+  visibility: hidden;
+  align-content: center;
+  
+}
+#ReportForm > div {
+  left: 50%;
+  position: fixed;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+#loading > div {
+  left: 50%;
+  position: fixed;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 #color-filter {
   z-index: 50000;
 }
@@ -205,5 +231,117 @@ select.shadow {
 
   #sidebar-image {
     min-height: 250px;
+  }
+  .exitButton{
+    color:black;
+    align-content: center;
+    font-size: 25;
+    font-weight: bold;
+    background-color: white;
+    border: white
+  }
+  .ReportButton{
+    background-color: #FF0000;
+    border: none;
+    color: white;
+    padding: 5px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    margin: 4px 2px;
+    cursor: pointer;
+    
+  }
+  .ReportButton:hover {
+    background-color: #8B0000;
+    
+  }
+  .SubmitButton{
+    background-color: green;
+    border: none;
+    color: white;
+    padding: 5px 140px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    float: center;
+    font-size: 15px;
+    margin: 4px 4px 4px 4px;
+    cursor: pointer;
+    text-align: center;
+    align-content: center;
+    align-self: center;
+    box-align: center;
+    position: relative;
+    
+  }
+  .SubmitButton:hover {
+    background-color: greenyellow;
+    
+  }
+  #formCloseButton {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    bottom: 5px;
+  }
+  .custom-select {
+    position: relative;
+    font-family: Arial;
+  }
+  
+  .custom-select select {
+    display: none; /*hide original SELECT element: */
+  }
+  
+  .select-selected {
+    background-color: DodgerBlue;
+  }
+  
+  /* Style the arrow inside the select element: */
+  .select-selected:after {
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
+  }
+  
+  /* Point the arrow upwards when the select box is open (active): */
+  .select-selected.select-arrow-active:after {
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+  }
+  
+  /* style the items (options), including the selected item: */
+  .select-items div,.select-selected {
+    color: #ffffff;
+    padding: 8px 16px;
+    border: 1px solid transparent;
+    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    cursor: pointer;
+  }
+  
+  /* Style items (options): */
+  .select-items {
+    position: absolute;
+    background-color: DodgerBlue;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
+  }
+  
+  /* Hide the items when the select box is closed: */
+  .select-hide {
+    display: none;
+  }
+  
+  .select-items div:hover, .same-as-selected {
+    background-color: rgba(0, 0, 0, 0.1);
   }
 }
